@@ -91,6 +91,9 @@ IN DEVELOPMENT
       the ``--use-existing-dir`` flag.
       (John Arbash Meinel, #30576, #45504)
 
+    * ``bzr log branch/file`` works for local treeless branches
+      (Aaron Bentley, #84247)
+
   TESTING:
 
     * New ``--first`` option to ``bzr selftest`` to run specified tests
